--- a/build.gradle
+++ b/build.gradle
@@ -19,9 +19,8 @@ javafx {
 dependencies {
     testImplementation 'org.jetbrains.kotlin:kotlin-test'
     implementation 'no.tornado:tornadofx:1.7.20'
-    // https://mvnrepository.com/artifact/org.xerial/sqlite-jdbc
     implementation 'org.xerial:sqlite-jdbc:3.39.3.0'
-    implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.4.0"
+    implementation 'com.google.code.gson:gson:2.9.1'
 
 }
 
