--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,7 @@ repositories {
 
 javafx {
     version = "11.0.2"
-    modules = ['javafx.controls', 'javafx.graphics']
+    modules = ['javafx.controls', 'javafx.graphics',"javafx.web"]
 }
 
 dependencies {
@@ -21,6 +21,7 @@ dependencies {
     implementation 'no.tornado:tornadofx:1.7.20'
     implementation 'org.xerial:sqlite-jdbc:3.39.3.0'
     implementation 'com.google.code.gson:gson:2.9.1'
+
 
 }
 
